First Component-Header Done

--- a/src/app/header.html
+++ b/src/app/header.html
@@ -1,3 +1,7 @@
 <header>
-  <h1>TaskIT</h1>
+  <img src="assets/logo.png" alt="TaskIT Logo" />
+  <div>
+    <h1>TaskIT</h1>
+    <p>Enterprise-level task management without friction</p>
+  </div>
 </header>
