--- a/src/app/user/user.html
+++ b/src/app/user/user.html
@@ -1,7 +1,7 @@
 <div>
   <button>
     <img
-      [src]=""
+      [src]="imagePath"
       [alt]="selectedUser.name"
     />
     <span>{{selectedUser.name}}</span>
