--- a/src/app/tasks/tasks.html
+++ b/src/app/tasks/tasks.html
@@ -7,14 +7,10 @@
   </menu>
 
   <ul>
-    <li>
-      <app-task />
-    </li>
-    <li>
-      <app-task />
-    </li>
-    <li>
-      <app-task />
-    </li>
+    @for (task of selectedUserTasks; track task.id) {
+      <li>
+        <app-task [task]="task" />
+      </li>
+    }
   </ul>
 </section>
